src/main/java/ir/mmd/intellijDev/Actionable/text/macro/lang/MacroTemplate.bnf
{
	parserClass="ir.mmd.intellijDev.Actionable.text.macro.lang.MacroTemplateParser"
	extends="com.intellij.extapi.psi.ASTWrapperPsiElement"
	psiClassPrefix="MacroTemplatePsi"
	psiImplClassSuffix="Impl"
	psiPackage="ir.mmd.intellijDev.Actionable.text.macro.lang.psi"
	psiImplPackage="ir.mmd.intellijDev.Actionable.text.macro.lang.psi.impl"
	elementTypeHolderClass="ir.mmd.intellijDev.Actionable.text.macro.lang.psi.MacroTemplateTypes"
	elementTypeClass="ir.mmd.intellijDev.Actionable.text.macro.lang.psi.MacroTemplateElementType"
	tokenTypeClass="ir.mmd.intellijDev.Actionable.text.macro.lang.psi.MacroTemplateTokenType"
	psiImplUtilClass="ir.mmd.intellijDev.Actionable.text.macro.lang.psi.impl.MacroTemplatePsiImplUtilKt"
	generateTokenAccessors=true
}

MacroTemplateFile ::= (Placeholder | CaretIndicator | Text)*

Placeholder ::= DOLLAR PLACEHOLDER_NAME DOLLAR

CaretIndicator ::= DOLLAR NUMBER DOLLAR {methods=[getNumberInt]}

private Text ::= ANY_TEXT | DOLLAR | ESCAPE | ESCAPED_DOLLAR | ESCAPED_ESCAPE | PLACEHOLDER_NAME | NUMBER
